--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "gh-pages": "^5.0.0",
     "http-errors": "~1.6.3",
     "mongoose": "^7.0.0",
     "morgan": "~1.9.1"
